--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "main": "index.js",
    "dependencies": {
       "express": "^4.17.1",
+      "mongoose": "^5.12.10",
       "nodemon": "^2.0.7",
       "socketio": "^1.0.0"
    },
