--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
       "nodemon": "^2.0.7",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0",
       "socketio": "^1.0.0"
    },
    "devDependencies": {},
