--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "A darts scoring web app for playing online matches against your friends.",
    "main": "index.js",
    "dependencies": {
+      "cookie-session": "^1.4.0",
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
       "nodemon": "^2.0.7",
