--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "A darts scoring web app for playing online matches against your friends.",
    "main": "index.js",
    "dependencies": {
+      "bcrypt": "^5.0.1",
       "cookie-session": "^1.4.0",
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
@@ -15,6 +16,7 @@
    "devDependencies": {},
    "scripts": {
       "start": "node index.js",
+      "dev": "nodemon run index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "repository": {
