--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "cookie-session": "^1.4.0",
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
+      "nanoid": "^3.1.23",
       "nodemon": "^2.0.7",
       "passport": "^0.4.1",
       "passport-local": "^1.0.0",
