--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "main": "index.js",
    "dependencies": {
       "bcrypt": "^5.0.1",
+      "concurrently": "^6.2.0",
       "cookie-session": "^1.4.0",
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
@@ -17,8 +18,9 @@
    "devDependencies": {},
    "scripts": {
       "start": "node index.js",
-      "dev": "nodemon run index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "server": "nodemon run index.js",
+      "client": "npm run start --prefix client",
+      "dev": "concurrently \"npm run server\" \"npm run client\""
    },
    "repository": {
       "type": "git",
