--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "nodemon": "^2.0.7",
       "passport": "^0.4.1",
       "passport-local": "^1.0.0",
-      "socketio": "^1.0.0"
+      "socket.io": "^4.1.2"
    },
    "devDependencies": {},
    "scripts": {
