--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
       "express": "^4.17.1",
       "mongoose": "^5.12.10",
       "nanoid": "^3.1.23",
+      "nanoid-dictionary": "^4.3.0",
       "nodemon": "^2.0.7",
       "passport": "^0.4.1",
       "passport-local": "^1.0.0",
       "socket.io": "^4.1.2"
    },
-   "devDependencies": {},
    "scripts": {
       "start": "node index.js",
       "server": "nodemon run index.js",
